--- a/frontend/src/layouts/Progress.css
+++ b/frontend/src/layouts/Progress.css
@@ -1,8 +1,9 @@
-﻿.ProgressBar {
+﻿.progress-bar {
     width: 100%;
     height: 8px;
     background-color: rgb(183, 155, 229);
     border-radius: 5px;
+    border: solid 1px black;
 }
 
 .Progress {
