updated more shit...hopefully this works

--- a/frontend/src/layouts/MainLayout.css
+++ b/frontend/src/layouts/MainLayout.css
@@ -1,13 +1,8 @@
-﻿div{
-    background-color: lightblue;
-}
-.login {
+﻿.login {
     margin-left: auto;
     margin-right: auto;
 }
-button {
-    float:right;
-}
+
 
 /*.imgSet2 {
     background-image: url(../images/sphere.jpg), url(../images/csSphere.jpg), url(../images/signature1.png);
