--- a/frontend/src/layouts/AccountHome.css
+++ b/frontend/src/layouts/AccountHome.css
@@ -1,6 +1,40 @@
-﻿body {
-    background-color: #fff;
+﻿/* header of page */
+#streamosphere-banner {
+    font-size: 32pt;
+    font-weight: bold;
+    clear: both;
+    margin: 10px 5px;
+    border-bottom: solid 1px gray;
 }
+
+/* left hand navigation options: new, upload, download */
+#left-content {
+    float: left;
+    display: inline-block;
+    width: 15%;
+    height: 100%;
+    padding: 15px;
+    text-align: center;
+}
+
+/* right hand page container - library view */
+#right-content {
+    float: right;
+    display: inline-block;
+    width: 84%;
+    height: 100%;
+    padding: 15px;
+    background-color: #a5abab66;
+}
+
+/* container for left and right content */
+#page-container {
+    width: 100%;
+    height: 100%;
+    background-color: #e0e0e0;
+}
+
+
 ContextMenu {
     position: fixed;
     background: white;
