--- a/frontend/src/layouts/UploadFile.css
+++ b/frontend/src/layouts/UploadFile.css
@@ -5,6 +5,8 @@
     align-items: flex-start;
     text-align: left;
     overflow: hidden;
+    margin: 20px;
+    height: 100%;
 }
 
 .Content {
@@ -35,6 +37,7 @@
 .Title {
     margin-bottom: 32px;
     color: black;
+    font-size: 24pt;
 }
 
 .Filename {
@@ -66,32 +69,16 @@
     align-items: center;
 }
 
-button {
-    font-family: "Roboto medium", sans-serif;
-    font-size: 14px;
-    display: inline-block;
-    height: 36px;
-    min-width: 88px;
-    padding: 6px 16px;
-    line-height: 1.42857143;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border: 0;
-    border-radius: 2px;
-    
-    color: black;
-    outline: 0;
+.Card {
+    background-color: white;
+    padding: 64px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
+    box-sizing: border-box;
 }
 
-    button:disabled {
-        background: rgb(189, 189, 189);
-        cursor: default;
-    }
+.UploadCancelButton {
+    margin: 5px;
+}
